--- a/URCap/de.hsel.ips.urcap.greifer/pom.xml
+++ b/URCap/de.hsel.ips.urcap.greifer/pom.xml
@@ -5,10 +5,10 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.ur.urcap.examples.driver.gripper</groupId>
-	<artifactId>simplegripper</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<name>Simple Gripper</name>
+	<groupId>de.hsel.ips.urcap</groupId>
+	<artifactId>greifer</artifactId>
+	<version>1.0</version>
+	<name>IPS_Greifer</name>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -18,11 +18,11 @@
 		<!--         that comes along with your URCap                           -->
 		<!--********************************************************************-->
 		<!--******************* BEGINNING OF URCAP META DATA *******************-->
-		<urcap.symbolicname>com.ur.urcap.examples.driver.gripper.simplegripper</urcap.symbolicname>
-		<urcap.vendor>Universal Robots</urcap.vendor>
-		<urcap.contactAddress>Energivej 25, 5260 Odense S, Denmark</urcap.contactAddress>
-		<urcap.copyright>Copyright (C) 2009-${copyright.year} Universal Robots. All Rights Reserved</urcap.copyright>
-		<urcap.description>Simple Gripper URCap</urcap.description>
+		<urcap.symbolicname>de.hsel.ips.urcap.greifer</urcap.symbolicname>
+		<urcap.vendor>HS Emden/Leer</urcap.vendor>
+		<urcap.contactAddress>Christian Köhlke, Maite-Aileen Brandt</urcap.contactAddress>
+		<urcap.copyright>Copyright (C) 2021-${copyright.year} HS Emden/Leer. All Rights Reserved</urcap.copyright>
+		<urcap.description>IPS Labor Greifer</urcap.description>
 		<urcap.licenseType>Sample license</urcap.licenseType>
 		<urcap.compatibility.CB3>true</urcap.compatibility.CB3>
 		<urcap.compatibility.eSeries>true</urcap.compatibility.eSeries>
