arduino error handling - added error codes 10, 20, 30 - send back 0 for successful execution - i2c communication will be tried up to 10 times - added motor gear ratio

--- a/Arduino/platformio.ini
+++ b/Arduino/platformio.ini
@@ -14,3 +14,10 @@ board = nanoatmega328
 framework = arduino
 monitor_speed = 115200
 lib_deps = featherfly/SoftwareSerial@^1.0
+
+[env:nanoatmega328HS]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+monitor_speed = 115200
+lib_deps = featherfly/SoftwareSerial@^1.0
